@@ -8,11 +8,15 @@ import android.text.SpannableString;
 import android.text.style.ForegroundColorSpan;
 import android.text.style.RelativeSizeSpan;
 
+import com.google.gson.Gson;
+
 import java.io.BufferedReader;
-import java.io.InputStream;
+import java.io.BufferedWriter;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 /**
  * Created by Yogesh on 3/17/2016.
@@ -36,9 +40,8 @@ public class SubmitOTP extends AsyncTask<Object, String, String> {
     @Override
     protected String doInBackground(Object[] params) {
         if (!isCancelled()) {
-            String number = (String) params[0];
-            String otp = (String) params[1];
-            return getServerInfo(number,otp);
+            OTPInfo info = (OTPInfo) params[0];
+            return getServerInfo(info);
         } else
             return null;
     }
@@ -71,35 +74,39 @@ public class SubmitOTP extends AsyncTask<Object, String, String> {
         }
     }
 
-    private String getServerInfo(String number, String otp) {
-        StringBuilder urlString = new StringBuilder();
-        urlString.append("http://gabstivouch.azurewebsites.net/api/VerifyOTP/verifyotp?");
-        urlString.append("mobileno=").append(number);
-        urlString.append("&OTPNo=").append(otp);
-
-        HttpURLConnection urlConnection = null;
-        URL url = null;
-        String temp, response = "";
-
+    private String getServerInfo(OTPInfo info) {
+        Gson gson = new Gson();
+        String OTPString = gson.toJson(info);
+        String result = "";
+        URI uri;
         try {
-            url = new URL(urlString.toString());
-            urlConnection = (HttpURLConnection) url.openConnection();
-            urlConnection.setRequestMethod("POST");
+            uri = new URI("http://gabsti.azurewebsites.net/api/VerifyOTP");
+            HttpURLConnection urlConnection = (HttpURLConnection) uri.toURL().openConnection();
             urlConnection.setDoOutput(true);
-            urlConnection.setDoInput(true);
+            urlConnection.setRequestProperty("Content-Type", "application/json");
+            urlConnection.setRequestProperty("Accept", "application/json");
+            urlConnection.setRequestMethod("POST");
             urlConnection.connect();
-            InputStream inStream = null;
-            inStream = urlConnection.getInputStream();
-            BufferedReader bReader = new BufferedReader(new InputStreamReader(inStream));
-            while ((temp = bReader.readLine()) != null)
-                response += temp;
-            bReader.close();
-            inStream.close();
-            urlConnection.disconnect();
-//            object = (JSONObject) new JSONTokener(response).nextValue();
+            //Write
+            OutputStream outputStream = urlConnection.getOutputStream();
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(outputStream, "UTF-8"));
+            //Call parserUsuarioJson() inside write(),Make sure it is returning proper json string .
+            writer.write(OTPString.toString());
+            writer.close();
+            outputStream.close();
+
+            //Read
+            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(urlConnection.getInputStream(), "UTF-8"));
+            String line = null;
+            StringBuilder sb = new StringBuilder();
+            while ((line = bufferedReader.readLine()) != null) {
+                sb.append(line);
+            }
+            bufferedReader.close();
+            result = sb.toString();
         } catch (Exception e) {
-            e.getMessage();
+            e.printStackTrace();
         }
-        return (response);
+        return result;
     }
 }
